@@ -20,7 +20,7 @@ If you want to compile Therion from source code and run it, you need
 * GNU C/C++ compiler
 * GNU make
 * Perl
-* Python 2.7 or 3
+* Python 3
 * PROJ library (\www{https://proj4.org/})
 * Tcl/Tk 8.4.3 and newer (\www{https://www.tcl.tk}) with
   {\it BWidget} widget set  \hfil\break
